--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schleifner/eslint-config-base",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Common Eslint configuration for typescript repository",
   "main": "config.cjs",
   "keywords": [
@@ -12,19 +12,19 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.17.0",
+    "typescript-eslint": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.2.6",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-import-resolver-typescript": "^4.3.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.1.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-sonarjs": "^0.19.0",
-    "eslint-plugin-unicorn": "^47.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "eslint-plugin-promise": "^7.2.0",
+    "eslint-plugin-sonarjs": "^3.0.0",
+    "eslint-plugin-unicorn": "^58.0.0",
+    "eslint-plugin-unused-imports": "^4.0.0"
   },
   "repository": {
     "type": "git",
